@@ -174,6 +174,9 @@
                     if(a){propobj.raiseassigned()}
 				}
 			}
+            this.text=function(){
+                return propobj.value();
+            }
 			this.enabled=function(v){
 				if(v==missing){
 					return propenabled;
