@@ -1,4 +1,10 @@
 ==================================
+Rilascio v2.0.26    del 05/09/2017
+==================================
+
+ryFamily: applicato lo stile in addfolder e additem.
+
+==================================
 Rilascio v2.0.25    del 02/09/2017
 ==================================
 
